...
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cfj-aV-i95">
                                <rect key="frame" x="16" y="690" width="382" height="48"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="JkU-vH-56d"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти">
                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="17"/>
...
                                <connections>
                                    <outlet property="delegate" destination="RIj-Du-ecp" id="NKt-WF-93a"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QO1-Yk-xTY">
                                <rect key="frame" x="8" y="56" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="BackButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="F1x-Yu-jDQ"/>
                                    <constraint firstAttribute="width" constant="48" id="QYv-6b-Vdj"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="nav_back_button_white"/>
...
                                <rect key="frame" x="0.0" y="150" width="414" height="4"/>
                                <color key="tintColor" red="0.1019607843" green="0.1058823529" blue="0.1333333333" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                            </progressView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="Ws2-o1-pjc"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="UnsplashWebView">
                            <bool key="isElement" value="YES"/>
                        </accessibility>
                        <constraints>
                            <constraint firstItem="3uy-gV-9IT" firstAttribute="leading" secondItem="HeM-Iv-Aod" secondAttribute="leading" id="0yX-cp-Uw5"/>
                            <constraint firstAttribute="bottom" secondItem="3uy-gV-9IT" secondAttribute="bottom" id="8XR-vh-AT5"/>
                            <constraint firstItem="S2a-CW-yQB" firstAttribute="top" secondItem="Ws2-o1-pjc" secondAttribute="top" id="UeF-7m-kcY"/>
...
