...
        delegate?.imageListCellDidTapLike(self)
    }
    
    override func awakeFromNib() {
        super.awakeFromNib()
        likeButton.isAccessibilityElement = true
        likeButton.accessibilityIdentifier = "LikeButton"
        cellImage.isUserInteractionEnabled = false
    }
    
    func setIsLiked(_ isLiked: Bool) {
        likeButton.setImage(isLiked ? .likeButtonActive : .likeButtonNoActive, for: .normal)
        likeButton.accessibilityValue = isLiked ? "liked" : "notLiked"
...
